fix: enhance dark mode hover styles for better visibility

--- a/tweaks.user.styl
+++ b/tweaks.user.styl
@@ -678,6 +678,11 @@
   ::picker(select) {
     top: calc(anchor(bottom) + 4px);
   }
+
+  .dark\\\:hover\\\:bg-coolgray-100:where(.dark,.dark *):hover {
+    background: none!important;
+    color: var(--cfy-text) !important;
+  }
 } // coolify.local/*"), url-prefix("https://app.coolify.io/*") {
 
 /* end @-moz-document */
